k8s/04-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-api
  namespace: test
  labels:
    app: cart-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-api
  template:
    metadata:
      labels:
        app: cart-api
    spec:
      containers:
        - name: cart-api
          image: innowise-cart-api-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: '64Mi'
              cpu: '100m'
            limits:
              memory: '128Mi'
              cpu: '500m'
