k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-api
  namespace: test
spec:
  selector:
    app: cart-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
